# ac-modding-kit

./: .editorconfig  .gitattributes  .gitignore  BOOTSTRAP.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  compatibility_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  models.yml
docs/: compatibility-policy.md  releasing.md  sdk.md  standalone-buildings.md
docs/reference/: support-matrix.md
docs/tutorials/: first-safe-mod.md
examples/: import_skeleton.py  sdk_quickstart.py
modeling/: README.md  toolchain.lock.json
modeling/assets/building/starter_shelter/: README.md  asset.toml  checksums.sha256  report.json
modeling/assets/building/starter_shelter/exports/: StarterBuilding_Blueprint.fbx  StarterBuilding_Build_00.fbx  StarterBuilding_Collider.fbx  StarterBuilding_Dark.fbx  StarterBuilding_Decay_00.fbx  StarterBuilding_Default.fbx
modeling/assets/building/starter_shelter/source/: starter_shelter.blend
modeling/assets/building/starter_shelter/textures/: C.tga  T.tga
modeling/assets/plant/starter_plant/: README.md  asset.toml  checksums.sha256  report.json
modeling/assets/plant/starter_plant/exports/: Mesh.fbx
modeling/assets/plant/starter_plant/source/: starter_plant.blend
modeling/assets/plant/starter_plant/textures/: C.tga  N.tga
modeling/assets/resource/starter_resource/: README.md  asset.toml  checksums.sha256  report.json
modeling/assets/resource/starter_resource/exports/: Heap_LOD0.fbx  Heap_LOD1.fbx  Load_Human.fbx  PileContent.fbx  Resource.fbx
modeling/assets/resource/starter_resource/source/: starter_resource.blend
modeling/assets/resource/starter_resource/textures/: C.tga
schemas/: README.md  __init__.py  acmk-project-v1.schema.json  acmk-report-envelope-v1.schema.json  acmk-runtime-test-v1.schema.json  acmk-runtime-test-v2.schema.json  acmk-runtime-test-v3.schema.json  acmk-workshop-state-v1.schema.json
skills/ancient-cities-modding/: SKILL.md
skills/ancient-cities-modding/agents/: openai.yaml
skills/ancient-cities-modding/references/: __init__.py  format-and-layout.md  forum-articles.md  legal-and-publishing.md  local-baseline.md  workflows.md
skills/ancient-cities-modding/scripts/: ancient_cities_mod.py
src/acmk/: __init__.py  __main__.py  _version.py  builder.py  building.py  cli.py  config.py  doctor.py  errors.py  knowledge.py  manifest.py  paths.py  project.py  reports.py  sdk.py  workshop.py
tests/: test_ancient_cities_mod.py  test_building.py  test_knowledge.py  test_model_assets.py  test_sdk.py  test_workshop.py
tools/blender/: generate_all.py  validate_models.py
